// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshots badge label 1`] = `
<div
  class="component lg circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="72"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="72"
  />
  <div
    class="badge"
  >
    <div
      class="absolute right-0 border-solid border-gray-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-gray-600 border-gray-100 text-white rounded-full min-w-6 p-1 -top-2"
    >
      Test Badge
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots badgeColor 1`] = `
<div
  class="component lg circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="72"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="72"
  />
  <div
    class="badge"
  >
    <div
      class="absolute right-0 border-solid border-gray-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-purple-600 border-purple-100 text-white rounded-full min-w-6 p-1 -top-2"
    >
      Purple
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots badgeShape circle [default] 1`] = `
<div
  class="component lg circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="72"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="72"
  />
  <div
    class="badge"
  >
    <div
      class="absolute right-0 border-solid border-gray-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-gray-600 border-gray-100 text-white rounded-full min-w-6 p-1 -top-2"
    >
      Test Badge
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots badgeShape square 1`] = `
<div
  class="component lg circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="72"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="72"
  />
  <div
    class="badge"
  >
    <div
      class="absolute right-0 border-solid border-gray-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-gray-600 border-gray-100 text-white rounded-md min-w-6 p-1 -top-2"
    >
      Test Badge
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots shape circle [default] 1`] = `
<div
  class="component md circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="48"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="48"
  />
</div>
`;

exports[`Avatar snapshots shape square 1`] = `
<div
  class="component md square"
>
  <img
    alt="Avatar for Drew"
    class="avatar square"
    height="48"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="48"
  />
</div>
`;

exports[`Avatar snapshots size lg 1`] = `
<div
  class="component lg circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="72"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="72"
  />
</div>
`;

exports[`Avatar snapshots size md [default] 1`] = `
<div
  class="component md circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="48"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="48"
  />
</div>
`;

exports[`Avatar snapshots size xs 1`] = `
<div
  class="component xs circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="24"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="24"
  />
</div>
`;

exports[`Avatar snapshots size xxs 1`] = `
<div
  class="component xxs circle"
>
  <img
    alt="Avatar for Drew"
    class="avatar circle"
    height="16"
    src="https://avatars1.githubusercontent.com/u/194885"
    width="16"
  />
</div>
`;
